@@ -35,7 +35,7 @@ while (!$tdres->EOF)
 {
     $playerinfo = $tdres->fields;
     $ship_fighters_max = NUM_FIGHTERS ($playerinfo['computer']);
-    $torps_max = NUM_TORPEDOES ($playerinfo['torp_launchers']);
+    $torps_max = \bnt\CalcLevels::Torpedoes ($playerinfo['torp_launchers'], $level_factor);
     $armor_pts_max = \bnt\CalcLevels::Armor ($playerinfo['armor'], $level_factor);
 
     // Checking Fighters
