@@ -1,3 +1,7 @@
+TheKabal (1 March 2013)
+--------------------------------------
+num_torps has been replaced by \bnt\CalcLevels::Torpedoes, which is auto-loaded from the vendor/bnt directory.
+
 TheKabal (24 February 2013)
 --------------------------------------
 Moved setGamepath and setGamedomain out into autoloaded classes, reducing the size of common.php
